--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -94,9 +94,62 @@
     font-size: var(--fs-6xl);
 }
 
-@media (max-width:575px) {
+@media (min-width:575px) {
     :root {
-     
-                     
+        --fs-sm: 12px;    
+        --fs-md: 14px;
+        --fs-lg: 16px;
+        --fs-xl: 20px;
+        --fs-2xl: 23px;
+        --fs-3xl: 24px;
+        --fs-4xl: 40px;
+        --fs-5xl: 48px;
+        --fs-6xl: 61px;
+        
+    
+    
+        --line-height-16: 16px;
+        --line-height-18: 18px;
+        --line-height-21: 21px;
+        --line-height-23: 23px;
+        --line-height-24: 24px;
+        --line-height-26: 26px;
+        --line-height-27: 27px;
+        --line-height-30: 30px;
+        --line-height-36: 36px;
+        --line-height-46: 46px;
+        --line-height-56: 56px;
+        --line-height-71: 71px;
+                          
     }   
+}
+@media (min-width:992px) {
+    :root{
+        --fs-sm: 12px;    
+        --fs-md: 14px;
+        --fs-lg: 16px;
+        --fs-xl: 20px;
+        --fs-2xl: 23px;
+        --fs-3xl: 24px;
+        --fs-4xl: 40px;
+        --fs-5xl: 48px;
+        --fs-6xl: 61px;
+        
+    
+    
+        --line-height-16: 16px;
+        --line-height-18: 18px;
+        --line-height-21: 21px;
+        --line-height-23: 23px;
+        --line-height-24: 24px;
+        --line-height-26: 26px;
+        --line-height-27: 27px;
+        --line-height-30: 30px;
+        --line-height-36: 36px;
+        --line-height-46: 46px;
+        --line-height-56: 56px;
+        --line-height-71: 71px;
+
+    }
+    
 }
