--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import url(./root.css);
 
 * {
@@ -8,6 +10,11 @@
     text-decoration: none !important;
     box-sizing: border-box;
 }
+/* ----------------------------------------font-family */
+.font-Work-sans{
+    font-family: "Work Sans", sans-serif;
+}
+/* ----------------------------------------font-family */
 
 /* ----------------------------------------padding */
 /* ----------------------------------------padding */
