--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,9 @@
 /* ----------------------------------------margin */
 /* ----------------------------------------margin */
 /* ----------------------------------------gap */
+.gap-12{
+    gap: 12px;
+}
 .gap-46{
     gap: 46px;
 }
