--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,12 +17,18 @@
 /* ----------------------------------------font-family */
 
 /* ----------------------------------------padding */
+.pt-23{
+    padding-top: 23px;
+}
 /* ----------------------------------------padding */
 /* ----------------------------------------margin */
 /* ----------------------------------------margin */
 /* ----------------------------------------gap */
 .gap-12{
     gap: 12px;
+}
+.gap-29{
+    gap: 29px;
 }
 .gap-46{
     gap: 46px;
@@ -161,7 +167,8 @@
         width: 29px;
         height: 3px;
         margin: 6px auto;
-        transition: all 0.3s ease-in-out;        
+        transition: all 0.3s ease-in-out;  
+        background-color: var(--white);      
     }
 } 
 /* ----------------------------------Navbar */
