--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,12 @@
 .pt-23{
     padding-top: 23px;
 }
+.pt-119{
+    padding-top: 119px;
+}
+.pb-59{
+    padding-bottom: 59px;
+}
 /* ----------------------------------------padding */
 /* ----------------------------------------margin */
 /* ----------------------------------------margin */
@@ -35,6 +41,9 @@
 }
 /* ----------------------------------------gap */
 /* ----------------------------------------width */
+.max-w-750{
+    max-width: 750px;
+}
 /* ----------------------------------------width */
 /* ----------------------------------------btn */
 /* ----------------------------------------btn */
@@ -61,12 +70,17 @@
 
 
 .btn-1 {    
+    padding: 12px 38px 13px 37px;
+    border-radius: 30px;
+    border: 1px solid transparent;
+    background: linear-gradient(96.64deg, var(--orange) 13.58%, var(--orangered) 86.99%);
+    
 
 }
 
 
 .btn-1:hover {
-
+    background: linear-gradient(96.64deg, var(--orangered)  13.58%,  var(--orange) 86.99%);
 } 
 .cursor-pointer{
     cursor: pointer;
@@ -87,6 +101,17 @@
 }
 .slick-btn:hover svg path {
     fill: white;
+}
+
+.duration-300{
+    transition: all 300ms linear !important;
+    
+}
+.bg-hero{
+    background-image: url(../images/webp/hero.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 
@@ -122,6 +147,12 @@
 /* ----------------------------------Navbar */
 .hamburger {
     display: none;
+}
+.nav-link:hover{
+    color: var(--orangered) ;
+    
+     
+
 }
  @media(max-width: 992px) {
     .menulist {
