--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,9 +33,14 @@
 .pt-14 {
     padding-top: 14px;
 }
-
+.pt-17{
+    padding-top: 17px;
+}
 .pt-20{
     padding-top: 20px;
+}
+.pt-21{
+    padding-top: 21px;
 }
 .pt-23 {
     padding-top: 23px;
@@ -51,6 +56,10 @@
 .pt-121{
     padding-top: 121px;
 }
+.pt-189{
+    padding-top: 189px;
+
+}
 .pt-217{
     padding-top: 217px;
 }
@@ -64,6 +73,12 @@
 
 /* ----------------------------------------padding */
 /* ----------------------------------------margin */
+.mt-25{
+    margin-top: 25px;
+}
+.mt-76{
+    margin-top: 76px;
+}
 /* ----------------------------------------margin */
 /* ----------------------------------------gap */
 .gap-12 {
@@ -100,7 +115,9 @@
 
 
 
-
+.h-438{
+    height: 438px;
+}
 
 
 
@@ -135,12 +152,29 @@
 
 .slick-btn:hover {}
 
-.pre-btn {}
+.pre-btn {
+    top: 50%;
+    left: -5%;
+    transform: translateY(-50%);
 
-.next-btn {}
+}
+
+.next-btn {
+    top: 50%;
+    right: -5%;
+}
 
 .slick-btn:hover svg path {
     fill: white;
+}
+.slider-box-1{
+    padding: 34px 36px 0 0;
+    /* box-shadow: 0px 4px 66px 0px #0000000A; */
+    /* box-shadow: 0px 4px 66px 0px #0000000A; */
+    box-shadow: 0px 4px 66px 0px #0000000A;
+    max-width: 1016px;
+
+    border-radius: 8px;
 }
 .h-200{
     height: 200px;
@@ -178,6 +212,9 @@
 
 .bg-2nd {
     background-image: url(../images/webp/Union.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 
 /* --------------------------------------card */
@@ -353,3 +390,11 @@
 @media (max-width: 1200px) {}
 
 @media (min-width:1200px) {}
+
+
+.box{
+    height: 400px;
+    width: 700px;
+    display:block;
+    background: red;
+}
