--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -421,6 +421,26 @@
 }
 
 
+/* ----------------------top-btn */
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-image: linear-gradient(96.64deg, #FD9B2B 13.58%, #F14F09 86.99%);
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+/* ----------------------top-btn */
+
+
+
 /* ----------------------------------Underline */
 
 .underline::after {
