--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -430,6 +430,7 @@
     z-index: 99;
     font-size: 18px;
     border: none;
+    animation: fade-in-down-2 3s ease infinite;
     outline: none;
     background-image: linear-gradient(96.64deg, #FD9B2B 13.58%, #F14F09 86.99%);
     color: white;
@@ -438,7 +439,74 @@
     border-radius: 4px;
   }
 /* ----------------------top-btn */
+/* --------------------------------------preloder */
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-image: linear-gradient(96.64deg, #FD9B2B 13.58%, #F14F09 86.99%);  */
+    /* background: #FD9B2B ;    */
+    background-color: #FFFDFD;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
 
+.loader {
+    animation: fade-in-down 3s ease infinite;
+}
+
+
+
+@keyframes fade-in-down {
+    0% {
+        opacity: 0;
+        transform: translateY(0);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(-30px);
+    }
+}
+
+
+.loader-text:before {
+    content: attr(data-text);
+    position: absolute;
+    overflow: hidden;
+    
+    height: 100px;
+    max-width: 7em;
+    white-space: nowrap;
+    color: var(--white);
+    animation: loading 3s linear;
+}
+
+@keyframes loading {
+    0% {
+        max-width: 0;
+    }
+}
+
+/* --------------------------------------preloder */
+ 
+
+    
+@keyframes fade-in-down-2 {
+    0% {
+        opacity: 0;
+        transform: translateY(0);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(-10px);
+    }
+}
 
 
 /* ----------------------------------Underline */
