--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,6 @@
     box-sizing: border-box;
 }
 
-
 /* ----------------------------------------font-family */
 .font-Work-sans {
     font-family: "Work Sans", sans-serif;
@@ -96,8 +95,6 @@
     padding-bottom: 43px;
 }
 
-
-
 .pb-59 {
     padding-bottom: 59px;
 }
@@ -125,8 +122,6 @@
 .gap-12 {
     gap: 12px;
 }
-
-
 
 .gap-29 {
     gap: 29px;
@@ -161,6 +156,7 @@
 .max-w-1016 {
     max-width: 1016px;
 }
+
 .max-w-1140 {
     max-width: 1140px;
 }
@@ -168,7 +164,7 @@
 /* ----------------------------------------width */
 /* --------------------------------------card */
 .mycard {
-    box-shadow: 0px 4px 66px 0px #0000000A;
+    box-shadow: 0px 4px 66px 0px var(--shadow);
     width: 293px;
     height: 293px;
     border-radius: 8px;
@@ -196,112 +192,87 @@
 }
 
 .mycard:hover h6 {
-    color: white;
+    color: var(--white);
     opacity: 1;
 }
 
-.mycard:hover svg path {    
+.mycard:hover svg path {
     fill: url(#paint0_linear_34717_12224);
 }
+
 /* --------------------------------------card */
 /* ---------------------------------------toggle-btn */
-.switch {
-    /* position: relative; */
-    /* display: inline-block; */
+.switch {        
     width: 77px;
     height: 34px;
-  }
-  .switch input { 
+}
+
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
-  }
-  .slider {
-    /* position: absolute; */
-    cursor: pointer;
+}
+
+.slider {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;  
-    /* background-color: white;   */
+    bottom: 0;    
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  .slider:before {
+}
+
+.slider:before {
     position: absolute;
     content: "";
-    height: 27px;  
+    height: 27px;
     width: 27px;
     left: 3px;
     bottom: 3px;
-    background-image: linear-gradient(96.64deg, #FD9B2B 13.58%, #F14F09 86.99%);
+    background-image: linear-gradient(96.64deg, var(--orange) 13.58%, var(--orangered) 86.99%);
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  input:checked + .slider {  
-    background-image: linear-gradient(96.64deg, white  13.58%,  white 86.99%);
-  }
-  input:checked + .slider:before {
+}
+
+input:checked+.slider {
+    background-image: linear-gradient(96.64deg, var(--white) 13.58%, var(--white) 86.99%);
+}
+
+input:checked+.slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(42px);
-  }
-  .slider.round {
-    border-radius: 34px; 
-  }
-  .slider.round:before {
-    border-radius: 50%;  
-  }
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
 /* ---------------------------------------toggle-btn */
-.search-click {
-    border: 1px solid #ccc;
-    outline: none;
-    background-size: 22px;
-    background-position: 13px;
-    border-radius: 10px;
-    width: 50px;
-    height: 50px;
-    padding: 25px;
-    transition: all 0.5s;
-}
 
-.search-click:focus {
-    width: 300px;
-    padding-left: 50px;
-}
-
-.search-click {
-    position: relative;
-    overflow: hidden;
-    height: 50px;
-}
-
-.search-click input {
-    background: transparent;
-    border: 1px solid red !important;
-    outline: none;
-    position: absolute;
-    width: 300px;
-    height: 50px;
-    left: 0%;
-    padding: 10px;
-}
 
 .btn-1 {
     padding: 12px 38px 13px 37px;
     border-radius: 30px;
     border: 1px solid transparent;
-    background: linear-gradient(96.64deg, var(--orange) 13.58%, var(--orangered) 86.99%);
+    transition: all 300ms linear;
+    background-image: linear-gradient(96.64deg, var(--orange) 13.58%, var(--orangered) 86.99%);
 }
-
+.btn-1:hover{
+    box-shadow: 0px 0px 40px 0px var(--orange);
+}
+/* ----------------------------card */
 .pricing-card {
-    box-shadow: 0px 6px 12px 0px #0000000F;
+    box-shadow: 0px 6px 12px 0px var(--shadow);
     border-radius: 10px;
 }
 
 .gradient-heading {
-    background-image: linear-gradient(96.64deg, #FD9B2B 13.58%, #F14F09 86.99%) !important;
-    padding: 23px 41px 23px;    
+    background-image: linear-gradient(96.64deg, var(--orange) 13.58%, var(--orangered) 86.99%) !important;
+    padding: 23px 41px 23px;
 }
 
 .card-content {
@@ -313,34 +284,25 @@
     height: 55px;
     padding: 15px 10px 11px;
 }
+/* ----------------------------card */
+
 
 .h-56 {
     height: 56px;
 }
-
-.Ellipse446 {
-    right: 6px;
-    top: -39px;
-}
-
 .cursor-pointer {
     cursor: pointer;
 }
 
-
-
 .slider-box-1 {
-    padding: 23px;       
+    padding: 23px;
     border-radius: 8px;
-    box-shadow: 0px 4px 66px 0px #0000000A;
+    box-shadow: 0px 4px 66px 0px var(--shadow);
     margin: 20px;
 }
-
-
 .duration-300 {
     transition: all 300ms linear !important;
 }
-
 .gradient-box {
     background-image: linear-gradient(90deg, var(--orange), var(--orangered));
     border-radius: 10px;
@@ -355,14 +317,13 @@
 }
 
 .input-text {
-    border-bottom: 1px solid black !important;
+    border-bottom: 1px solid var(--black) !important;
     outline: none;
 }
 
 .resize-none {
     resize: none;
 }
-
 .line {
     height: 1px;
     display: block;
@@ -397,14 +358,8 @@
     top: 20%;
 }
 
-.vector1::after {
-    content: url(../images/svg/Vector1.svg);
-    position: absolute;
-    z-index: -1;    
-    left: -11%;
-    bottom: -117%;
-}
 
+/* -----------------------Ellipse  */
 .Ellipse15 {
     right: 0;
     bottom: 0;
@@ -419,8 +374,16 @@
     bottom: 0;
     right: 0;
 }
+.Ellipse446 {
+    right: 6px;
+    top: -39px;
+}
+.Ellipse446 {
+    right: 6px;
+    top: -39px;
+}
 
-
+/* -----------------------Ellipse  */
 /* ----------------------top-btn */
 #myBtn {
     display: none;
@@ -428,16 +391,13 @@
     bottom: 20px;
     right: 30px;
     z-index: 99;
-    font-size: 18px;
     border: none;
-    animation: fade-in-down-2 3s ease infinite;
     outline: none;
-    background-image: linear-gradient(96.64deg, #FD9B2B 13.58%, #F14F09 86.99%);
-    color: white;
-    cursor: pointer;
+    background-image: linear-gradient(96.64deg, var(--orange) 13.58%, var(--orangered) 86.99%);    
     padding: 15px;
     border-radius: 4px;
-  }
+}
+
 /* ----------------------top-btn */
 /* --------------------------------------preloder */
 .loading-overlay {
@@ -445,10 +405,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    /* background-image: linear-gradient(96.64deg, #FD9B2B 13.58%, #F14F09 86.99%);  */
-    /* background: #FD9B2B ;    */
-    background-color: #FFFDFD;
+    height: 100%;        
+    background-color: var(--loder-bg);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -458,8 +416,6 @@
 .loader {
     animation: fade-in-down 3s ease infinite;
 }
-
-
 
 @keyframes fade-in-down {
     0% {
@@ -473,42 +429,7 @@
     }
 }
 
-
-.loader-text:before {
-    content: attr(data-text);
-    position: absolute;
-    overflow: hidden;
-    
-    height: 100px;
-    max-width: 7em;
-    white-space: nowrap;
-    color: var(--white);
-    animation: loading 3s linear;
-}
-
-@keyframes loading {
-    0% {
-        max-width: 0;
-    }
-}
-
 /* --------------------------------------preloder */
- 
-
-    
-@keyframes fade-in-down-2 {
-    0% {
-        opacity: 0;
-        transform: translateY(0);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(-10px);
-    }
-}
-
-
 /* ----------------------------------Underline */
 
 .underline::after {
@@ -598,8 +519,6 @@
 
 /* ----------------------------------Navbar */
 
-@media (max-width: 575px) {}
-
 @media (min-width: 575px) {
     .pt-sm-60 {
         padding-top: 60px !important;
@@ -622,16 +541,22 @@
         background-image: linear-gradient(var(--orange), var(--orangered));
         box-shadow: none;
     }
+
     .gap-sm-23 {
         gap: 23px !important;
+    }
+    .vector1::after {
+        content: url(../images/svg/Vector1.svg);
+        position: absolute;
+        z-index: -1;
+        left: -11%;
+        bottom: -117%;
     }
 }
 
 @media (min-width: 768px) {
     .slider-box-1 {
-        padding: 25px;       
-        /* border-radius: 8px; */
-        /* box-shadow: 0px 4px 66px 0px #0000000A; */
+        padding: 25px;                
         margin: 30px 40px 30px;
     }
 }
@@ -662,7 +587,7 @@
     }
 
     .max-w-lg-540 {
-        max-width: 540px;
+        max-width: 540px !important;
     }
 
     .pt-lg-142 {
@@ -698,13 +623,13 @@
         background-image: linear-gradient(var(--orange), var(--orangered));
         box-shadow: none;
     }
+
     .pt-lg-94 {
         padding-top: 94px !important;
     }
+
     .slider-box-1 {
-        padding: 23px 36px 12px 12px;       
-        /* border-radius: 8px; */
-        /* box-shadow: 0px 4px 66px 0px #0000000A; */
+        padding: 23px 36px 12px 12px;
         margin: 40px 50px 40px;
     }
 }
@@ -715,10 +640,10 @@
         left: -4%;
         transform: translateY(-50%);
     }
+
     .next-btn {
         top: 50%;
         right: -4%;
         transform: translateY(-50%);
-    
     }
 }
