--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     margin: 0;
     list-style: none !important;
     text-decoration: none !important;
-    box-sizing: border-box;
+    box-sizing: border-box;    
 }
 
 /* ----------------------------------------font-family */
@@ -95,9 +95,7 @@
     padding-bottom: 43px;
 }
 
-.pb-59 {
-    padding-bottom: 59px;
-}
+
 
 .pb-45 {
     padding-bottom: 45px;
@@ -165,7 +163,7 @@
 /* --------------------------------------card */
 .mycard {
     box-shadow: 0px 4px 66px 0px var(--shadow);
-    width: 293px;
+    max-width: 293px;
     height: 293px;
     border-radius: 8px;
     padding: 40px 18px 25px;
@@ -285,8 +283,6 @@ input:checked+.slider:before {
     padding: 15px 10px 11px;
 }
 /* ----------------------------card */
-
-
 .h-56 {
     height: 56px;
 }
@@ -295,10 +291,10 @@ input:checked+.slider:before {
 }
 
 .slider-box-1 {
-    padding: 23px;
+    padding: 20px ;
     border-radius: 8px;
     box-shadow: 0px 4px 66px 0px var(--shadow);
-    margin: 20px;
+    margin: 20px 0;
 }
 .duration-300 {
     transition: all 300ms linear !important;
@@ -310,7 +306,7 @@ input:checked+.slider:before {
 }
 
 .bg-hero {
-    background-image: url(../images/webp/bg-hero.png);
+    background-image: url(../images/webp/bg-hero.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -342,13 +338,13 @@ input:checked+.slider:before {
 }
 
 .bg-2nd {
-    background-image: url(../images/webp/Union.png);
+    background-image: url(../images/webp/Union.webp);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .bg-footer {
-    background-image: url(../images/webp/footer.png);
+    background-image: url(../images/webp/footer.webp);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -469,7 +465,7 @@ input:checked+.slider:before {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-color: var(--orange);
+        background-color: var(--loder-bg);
         width: 100%;
         height: 100vh;
         gap: 32px;
@@ -518,12 +514,23 @@ input:checked+.slider:before {
 }
 
 /* ----------------------------------Navbar */
+@media (max-width:575px) {
+    #myBtn {
+     
+        bottom: 15px;
+        right: 15px;
+        
+    }
+    
+}
 
 @media (min-width: 575px) {
     .pt-sm-60 {
         padding-top: 60px !important;
     }
-
+    .pb-sm-59 {
+        padding-bottom: 59px !important;
+    }
     .pb-sm-60 {
         padding-bottom: 60px !important;
     }
